# incr-wordle

./: dune-project  wordle.opam
.github/workflows/: build.yml  fmt.yml  main.yml
game-engine/: dune  game.ml  game_engine.ml  game_engine.mli  get_date.ml  get_date.mli  normal_rule.ml  normal_rule.mli  number_generators.ml  number_generators.mli  shuffle_rule.ml  shuffle_rule.mli  words.ml  words.mli
tools/: common_words.ml  convert.ml
web/: app.ml  app.mli  dune  game_stats.ml  game_stats.mli  keyboard.ml  keyboard.mli  local_storage_manager.ml  local_storage_manager.mli  model.ml  model.mli  model_intf.ml
web/converters/: convert_12_29_2022.ml  converters.ml  converters.mli
